2005-11-04  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Made dbus_component_set_call_info accept
	when not all information is provided.
	* src/urlhandler.cpp: Made it tell the dbus component when we're
	calling.

2005-11-04  Julien Puydt  <jpuydt@free.fr>

	* src/endpoint.cpp, src/gnomemeeting.cpp, src/gnomemeeting.h: Played
	with #ifdef HAS_DBUS too. Sorry for forgetting.
	* src/dbus_component.h, src/dbus_component.cpp: Added the needed
	function to handle getting call state information.
	* src/endpoint.cpp: Made it give call state to dbus.

2005-11-03  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/gnomemeeting.cpp, src/gnomemeeting.h: Added
	a few missing #ifdef HAS_DBUS.

2005-11-03  Damien Sandras  <dsandras@gnome.org>

	* src/urlhandler.cpp: Fixed typo.
	
	* src/main_window.cpp: Modified show_chat_window_cb so that it adds 
	a new tab if we are in a call.

	* src/chat_window.cpp: Various fixes.

2005-11-03  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.h, src/dbus_component.cpp: Added an api function
	to enable the endpoint to give call information to dbus.
	* src/gnomemeeting.h, src/gnomemeeting.cpp: Added the GetDbusComponent
	method, so the endpoint can lay its hand on the dbus component.
	* src/endpoint.cpp: Made it give call information to dbus.

2005-11-03  Damien Sandras  <dsandras@gnome.org>

	* src/chat_window.cpp: Fixed "close" tab so that it closes the tab 
	for which the button is clicked and not the current tab.

2005-11-03  Damien Sandras  <dsandras@gnome.org>

	* src/urlhandler.cpp: Fixed GetCanonicalURL.

2005-11-03  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented getting a call token's protocol.

2005-11-02  Damien Sandras  <dsandras@gnome.org>

	* src/urlhandler.cpp: Fixed GetCanonicalURL.

	* src/sipendpoint.cpp: Changed timeouts again.

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the GetCallsList and