@@ -1,5 +1,10 @@
 2005-11-04  Julien Puydt  <jpuydt@free.fr>
 
+	* src/endpoint.cpp: Made more information on a caller available
+	through dbus.
+
+2005-11-04  Julien Puydt  <jpuydt@free.fr>
+
 	* src/dbus_component.cpp: Made dbus_component_set_call_info accept
 	when not all information is provided.
 	* src/urlhandler.cpp: Made it tell the dbus component when we're
